[gd_scene load_steps=27 format=3 uid="uid://cj6ao7ju12nhg"]

[ext_resource type="Script" path="res://Scripts/Start.gd" id="1_vc4ji"]
[ext_resource type="PackedScene" uid="uid://2r67te40csdi" path="res://Scenes/TestBackground.tscn" id="2_3hvx5"]
[ext_resource type="PackedScene" uid="uid://b6c5d68ty35va" path="res://Templates/Entities/PlayerEntityTemplate-OverheadBasic.tscn" id="2_momiq"]
[ext_resource type="Script" path="res://UI/UpgradesListUI.gd" id="3_1nlo4"]
[ext_resource type="PackedScene" uid="uid://csfqa5yos7088" path="res://Components/Gameplay/UpgradesComponent.tscn" id="3_fmr6d"]
[ext_resource type="PackedScene" uid="uid://gvkx3bnathwr" path="res://UI/UpgradeChoiceUI.tscn" id="4_cvcfv"]
[ext_resource type="PackedScene" uid="uid://d06m60dgdv8ui" path="res://Components/Data/StatsComponent.tscn" id="4_xiv2l"]
[ext_resource type="Script" path="res://Resources/Stat.gd" id="5_ntilw"]
[ext_resource type="Script" path="res://Resources/Upgrade.gd" id="6_rg6n6"]
[ext_resource type="Resource" uid="uid://db6e53uh7hg3w" path="res://Tests/UpgradeTest/UpgradeTestEnergyStat.tres" id="7_84sc6"]
[ext_resource type="Resource" uid="uid://ha75hcisu4qg" path="res://Tests/UpgradeTest/UpgradeTestGunUpgrade.tres" id="7_rhbc6"]
[ext_resource type="Resource" uid="uid://3v2uvuown2fn" path="res://Tests/UpgradeTest/UpgradeTestSpeedUpgrade.tres" id="8_d8lhl"]
[ext_resource type="Resource" uid="uid://d4c5l66oa3lfi" path="res://Tests/UpgradeTest/UpgradeTestAmmoStat.tres" id="8_l7edd"]
[ext_resource type="PackedScene" uid="uid://bifi5b0gcmh1v" path="res://Components/DebugComponent.tscn" id="8_u5nrd"]
[ext_resource type="Script" path="res://Scripts/UI/StatsUI.gd" id="10_7qbkd"]
[ext_resource type="Resource" uid="uid://cs65uuef7fi0x" path="res://Tests/UpgradeTest/UpgradeTestMoneyStat.tres" id="11_6dpev"]
[ext_resource type="PackedScene" uid="uid://dusjndm5o8ehr" path="res://Components/Combat/GunComponent.tscn" id="11_svor6"]
[ext_resource type="PackedScene" uid="uid://3ousmbcfyuac" path="res://Templates/Entities/BulletEntityTemplate.tscn" id="12_24xaf"]
[ext_resource type="PackedScene" uid="uid://qn8n4bqswnlr" path="res://Components/Control/MouseRotationComponent.tscn" id="13_ylr6w"]
[ext_resource type="Resource" uid="uid://dx7wulxv0xiwv" path="res://Tests/UpgradeTest/UpgradeTestCooldownUpgrade.tres" id="14_tqxh8"]
[ext_resource type="PackedScene" uid="uid://hydpkxd84sfq" path="res://UI/UpgradeLabel.tscn" id="15_yhqpv"]
[ext_resource type="Resource" uid="uid://cvchx637umpi8" path="res://Tests/UpgradeTest/UpgradeTestAmmoUpgrade.tres" id="17_q53kf"]

[sub_resource type="LabelSettings" id="LabelSettings_7h4yk"]
resource_local_to_scene = true
font_size = 8
font_color = Color(0.5, 0.5, 0.5, 1)
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_t2l6a"]
resource_local_to_scene = true
font_size = 8
font_color = Color(0.5, 0.5, 0.5, 1)
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_6ecoo"]
resource_local_to_scene = true
font_size = 8
font_color = Color(0.5, 0.5, 0.5, 1)
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0n0ul"]
resource_local_to_scene = true
font_size = 8
font_color = Color(0.5, 0.5, 0.5, 1)
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[node name="UpgradeTest" type="Node2D"]
script = ExtResource("1_vc4ji")
showTestBackground = false

[node name="TestBackground" parent="." instance=ExtResource("2_3hvx5")]
modulate = Color(1, 1, 1, 0.1)

[node name="Parallax2D1" parent="TestBackground" index="0"]
repeat_times = 3

[node name="Parallax2D2" parent="TestBackground" index="1"]
repeat_times = 3

[node name="PlayerEntityTemplate-OverheadBasic" parent="." instance=ExtResource("2_momiq")]

[node name="UpgradesComponent" parent="PlayerEntityTemplate-OverheadBasic" instance=ExtResource("3_fmr6d")]
shouldShowDebugInfo = true

[node name="StatsComponent" parent="PlayerEntityTemplate-OverheadBasic" instance=ExtResource("4_xiv2l")]
stats = Array[ExtResource("5_ntilw")]([ExtResource("11_6dpev"), ExtResource("7_84sc6"), ExtResource("8_l7edd")])
shouldShowDebugInfo = true

[node name="DebugComponent" parent="PlayerEntityTemplate-OverheadBasic" instance=ExtResource("8_u5nrd")]
propertiesToWatch = Array[NodePath]([NodePath("../OverheadPhysicsComponent:parameters:speed")])

[node name="GunComponent" parent="PlayerEntityTemplate-OverheadBasic" instance=ExtResource("11_svor6")]
visible = false
bulletEntity = ExtResource("12_24xaf")
ammo = ExtResource("8_l7edd")
isEnabled = false
cooldown = 1.01

[node name="MouseRotationComponent" parent="PlayerEntityTemplate-OverheadBasic" node_paths=PackedStringArray("nodeToRotate") instance=ExtResource("13_ylr6w")]
nodeToRotate = NodePath("../GunComponent")
isEnabled = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 8.0
offset_top = 8.0
offset_right = 145.0
offset_bottom = 44.0

[node name="StatsUI" type="HBoxContainer" parent="CanvasLayer/VBoxContainer" node_paths=PackedStringArray("statsComponent")]
layout_mode = 2
script = ExtResource("10_7qbkd")
statsComponent = NodePath("../../../PlayerEntityTemplate-OverheadBasic/StatsComponent")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="LoanButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "GET LOAN"

[node name="RechargeButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "RECHARGE"

[node name="Spacer1" type="Control" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="Label1" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 1, 1)
text = "___ Buy"

[node name="UpgradesListUI" type="VBoxContainer" parent="CanvasLayer/VBoxContainer" node_paths=PackedStringArray("targetEntity")]
layout_mode = 2
script = ExtResource("3_1nlo4")
upgrades = Array[ExtResource("6_rg6n6")]([ExtResource("8_d8lhl"), ExtResource("7_rhbc6"), ExtResource("14_tqxh8"), ExtResource("17_q53kf")])
targetEntity = NodePath("../../../PlayerEntityTemplate-OverheadBasic")
shouldShowDebugInfo = null

[node name="TemporaryUpgradeChoiceUI" parent="CanvasLayer/VBoxContainer/UpgradesListUI" instance=ExtResource("4_cvcfv")]
layout_mode = 2

[node name="Spacer2" type="Control" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="Label2" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 1, 1)
text = "___ Installed"

[node name="UpgradeLabel1" parent="CanvasLayer/VBoxContainer" instance=ExtResource("15_yhqpv")]
layout_mode = 2
text = "GUN"
label_settings = SubResource("LabelSettings_7h4yk")
upgrade = ExtResource("7_rhbc6")

[node name="UpgradeLabel2" parent="CanvasLayer/VBoxContainer" instance=ExtResource("15_yhqpv")]
layout_mode = 2
text = "COOLDOWN"
label_settings = SubResource("LabelSettings_t2l6a")
upgrade = ExtResource("14_tqxh8")

[node name="UpgradeLabel3" parent="CanvasLayer/VBoxContainer" instance=ExtResource("15_yhqpv")]
layout_mode = 2
text = "AMMO
"
label_settings = SubResource("LabelSettings_6ecoo")
upgrade = ExtResource("17_q53kf")

[node name="UpgradeLabel4" parent="CanvasLayer/VBoxContainer" instance=ExtResource("15_yhqpv")]
layout_mode = 2
text = "ZOOM"
label_settings = SubResource("LabelSettings_0n0ul")
upgrade = ExtResource("8_d8lhl")

[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/LoanButton" to="PlayerEntityTemplate-OverheadBasic/StatsComponent" method="changeStatValue" binds= [&"money", 100]]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/RechargeButton" to="PlayerEntityTemplate-OverheadBasic/StatsComponent" method="changeStatValue" binds= [&"energy", 100]]
[connection signal="didChooseUpgrade" from="CanvasLayer/VBoxContainer/UpgradesListUI" to="PlayerEntityTemplate-OverheadBasic/UpgradesComponent" method="addOrLevelUpUpgrade"]

[editable path="TestBackground"]
[editable path="PlayerEntityTemplate-OverheadBasic"]
